--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                                 <a href="desafio 2.html" class="btn btn-info link-a-1">Desafio 2</a>
                                 <a href="desafio 3.html" class="btn btn-info link-a-1">Desafio 3</a>
                                 <a href="desafio 4.html" class="btn btn-info link-a-1">Desafio 4</a>
-                                <a href="carregando.html" class="btn btn-info link-a-1">Desafio 1</a>
+                                <a href="carregando.html" class="btn btn-info link-a-1">Desafio carregando</a>
         
                             
                         </section>
